--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.4",
     "responsive-navbar-react": "^1.2.1",
+    "text-slider": "^1.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
