--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mdb-react-ui-kit": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-photo-album": "^1.16.1",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.4",
